# SVM_CLOB

./: .gitignore  ENHANCEMENT_PLAN.md  README.md  SETUP_GUIDE.md  package-lock.json  package.json  pullrequest.txt
.vercel/: project.json
docs/: frontend_refactor_design.md
svm_clob/: .gitignore  Anchor.toml  DEPLOYMENT.md  README.md  package.json
svm_clob/programs/svm_clob/: Cargo.toml
svm_clob/programs/svm_clob/src/: lib.rs  offchain_api.rs
svm_clob/tests/: svm_clob.js
svm_clob_frontend/: .env.development  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
svm_clob_frontend/src/: App.tsx  index.css  main.tsx
svm_clob_frontend/src/app/hooks/: useBackendStatus.ts
svm_clob_frontend/src/app/layouts/: AppLayout.tsx
svm_clob_frontend/src/app/providers/: AppProviders.tsx  AppServicesContext.ts  ServiceProvider.tsx  useAppServices.ts
svm_clob_frontend/src/app/routes/: AppRouter.tsx
svm_clob_frontend/src/components/: BalanceManager.tsx  EnhancedTradingDashboard.tsx  HomeView.tsx  MarketDataWidget.tsx  OrderBook.tsx  PriceChart.tsx  TradingDashboard.tsx  TradingInterface.tsx  UserDashboard.tsx  WalletConnection.tsx
svm_clob_frontend/src/config/: config.ts  mode.ts  solana.ts
svm_clob_frontend/src/contexts/: AnchorProvider.tsx  WalletContext.tsx
svm_clob_frontend/src/features/home/pages/: HomePage.tsx
svm_clob_frontend/src/features/portfolio/pages/: PortfolioPage.tsx
svm_clob_frontend/src/features/trade/pages/: TradePage.tsx
svm_clob_frontend/src/hooks/: useOrderBook.ts  usePlaceOrder.ts  useSvmClobClient.ts  useTradingData.ts  useTransactionHandler.ts  useUserOrders.ts  useWalletBalances.ts  useWalletConnection.ts
svm_clob_frontend/src/idl/: svm_clob.json
svm_clob_frontend/src/lib/: svm_clob_client.ts
svm_clob_frontend/src/services/: api-service.ts  api-types.ts  matching-engine.ts  mock-api-service.ts  mock-websocket-service.ts  resilient-api-service.ts  resilient-websocket-service.ts  service-factory.ts  websocket-factory.ts  websocket-service.ts
svm_clob_frontend/src/stores/: marketDataStore.ts  sessionStore.ts  uiLayoutStore.ts
svm_clob_frontend/src/types/: svm_clob.ts
svm_clob_infra/: Cargo.toml  README.md
svm_clob_infra/crates/cli/: Cargo.toml
svm_clob_infra/crates/cli/src/: lib.rs
svm_clob_infra/crates/matching-engine/: Cargo.toml
svm_clob_infra/crates/matching-engine/src/: lib.rs
svm_clob_infra/crates/order-book/: Cargo.toml
svm_clob_infra/crates/order-book/src/: lib.rs
svm_clob_infra/crates/rpc-server/: Cargo.toml
svm_clob_infra/crates/rpc-server/src/: lib.rs
svm_clob_infra/crates/storage/: Cargo.toml
svm_clob_infra/crates/storage/src/: lib.rs
svm_clob_infra/crates/types/: Cargo.toml
svm_clob_infra/crates/types/src/: lib.rs
svm_clob_infra/crates/websocket-server/: Cargo.toml
svm_clob_infra/crates/websocket-server/src/: lib.rs
svm_clob_infra/migrations/: 001_initial_schema.sql
