[package]
name = "svm-clob-matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core types
svm-clob-types = { path = "../types" }
svm-clob-order-book = { path = "../order-book" }
svm-clob-storage = { path = "../storage" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Testing
mockall = { workspace = true }

[features]
default = []